Fixed solutions-vectors to have the correct size.